Port from 1.19.2